--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,6 +110,7 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/edit_border"
                 android:hint="@string/ed_yzm"
+                android:inputType="number"
                 android:textColorHint="@color/input_hint_color"
                 android:textSize="14sp"
                 android:paddingLeft="5dp"/>
@@ -121,7 +122,6 @@
                 android:scaleType="fitXY"
                 android:layout_marginLeft="-3dp"
                 android:layout_alignParentRight="true"
-                android:src="@mipmap/rili"
                 />
         </LinearLayout>
 
