--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="newblue">#0000ff</color>
     <color name="gw_color">#F05353</color>
     <color name="lx_color">#FD7844</color>
+    <color name="device_msg">#ee6723</color>
     <color name="sb_color">#FFC404</color>
     <color name="dzwl_color">#25BBF3</color>
     <color name="bj_text">#1587F3</color>
