--- a/app/src/main/res/layout/activity_car_mon_search.xml
+++ b/app/src/main/res/layout/activity_car_mon_search.xml
@@ -2,12 +2,15 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/bg_search"
     android:fitsSystemWindows="true"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <include layout="@layout/layout_search_car"/>
     <RelativeLayout
+        android:id="@+id/rl_search_history"
         android:layout_width="match_parent"
         android:layout_height="44dp"
+        android:visibility="visible"
         android:background="@color/bg_search">
         <TextView
             android:layout_width="wrap_content"
@@ -27,8 +30,17 @@
     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleview"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/search_recycleview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:layout_marginTop="15dp">
 
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
