--- a/app/src/main/res/layout/activity_car_address.xml
+++ b/app/src/main/res/layout/activity_car_address.xml
@@ -2,6 +2,7 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:clipChildren="false"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <include android:id="@+id/title_l" layout="@layout/layout_title_car_address"/>
     <com.baidu.mapapi.map.MapView
@@ -15,13 +16,14 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/fl_vp"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:clipChildren="false"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             android:clipToPadding="false"
             android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            android:visibility="gone"
+            android:paddingLeft="35dp"
+            android:paddingRight="35dp"
             />
 
 </RelativeLayout>
