--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
                 android:background="@null"
                 android:hint="@string/login_pwd"
                 android:singleLine="true"
-                android:imeOptions="actionGo"
+
                 android:inputType="textPassword"
                 android:textColorHint="#FF4A4A4A"
                 android:textSize="15sp" />
@@ -110,6 +110,8 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/edit_border"
                 android:hint="@string/ed_yzm"
+                android:imeOptions="actionGo"
+                android:maxLength="4"
                 android:inputType="number"
                 android:textColorHint="@color/input_hint_color"
                 android:textSize="14sp"
