--- a/app/src/main/res/layout/view_alert_window.xml
+++ b/app/src/main/res/layout/view_alert_window.xml
@@ -1,38 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginRight="30dp"
-    android:layout_marginTop="100dp"
-    android:layout_marginBottom="100dp"
-    android:background="@drawable/layout_radius_white"
+    android:background="#00000000"
     xmlns:android="http://schemas.android.com/apk/res/android" >
-    <RelativeLayout
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+
         android:layout_width="match_parent"
-        android:layout_height="42dp">
+        android:gravity="center_vertical"
+        android:background="@drawable/layout_radius_white"
+        android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_height="42dp"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="车辆详情"
             android:textColor="@color/black"
             android:textSize="15sp"/>
-        <RelativeLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="224dp"
+            android:background="@drawable/layout_radius_drak_white"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/owner_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="车主姓名:赵丽丽"/>
+                <TextView
+                    android:id="@+id/car_status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/dl_radius"
+                    android:text="@string/impor_care"/>
+            </RelativeLayout>
+            <TextView
+                android:id="@+id/phone_num"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="手机号码：13510233333"/>
+            <TextView
+                android:id="@+id/car_vin"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="车架号：L1111111111W12345"/>
+            <TextView
+                android:id="@+id/car_num"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="车牌号：粤B12345"/>
+            <TextView
+                android:id="@+id/car_type"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="车型：奥迪-奥迪A4L"/>
+            <TextView
+                android:id="@+id/home_address"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="家庭地址：深圳市罗湖区莲湖路"/>
+            <TextView
+                android:id="@+id/work_address"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="工作地址：深圳市罗湖区莲湖路"/>
+            <TextView
+                android:id="@+id/customer"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="所属客户：瓜子二手车"/>
+
+
+        </LinearLayout>
+        <TextView
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:gravity="center_vertical"
+            android:text="设备详情"
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
+        <ListView
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:id="@+id/device_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/warning_color"></ListView>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/close"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="-15dp"
-            android:layout_marginRight="-15dp"
-            android:background="@drawable/layout_circle">
-            <TextView
-                android:id="@+id/btn_ok"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="X"
-                android:textColor="@color/title_color"
-                android:textSize="18sp"/>
-        </RelativeLayout>
+            android:src="@mipmap/miaobiao"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
-
-</LinearLayout>
+</RelativeLayout>
