--- a/app/src/main/res/layout/activity_car_address.xml
+++ b/app/src/main/res/layout/activity_car_address.xml
@@ -4,7 +4,9 @@
     android:fitsSystemWindows="true"
     android:clipChildren="false"
     android:id="@+id/root_main4"
+    android:background="#36000000"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+
     <include android:id="@+id/title_l" layout="@layout/layout_title_car_address"/>
     <com.baidu.mapapi.map.MapView
         android:id="@+id/mapview"
@@ -26,5 +28,11 @@
             android:paddingLeft="35dp"
             android:paddingRight="35dp"
             />
-
+    <View
+        android:id="@+id/zzc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:visibility="gone"
+        android:alpha="0.5"/>
 </RelativeLayout>
