--- a/app/src/main/res/layout/list_device.xml
+++ b/app/src/main/res/layout/list_device.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="70dp"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/device_name"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:text="K123456/有线"/>
         <TextView
+            android:id="@+id/bind_time"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="3"
+            android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="绑车时间:2017-08-01  12:00  "/>
+            android:text="绑车时间:2017-08-01"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="3">
         <TextView
+            android:id="@+id/install_loc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="安装位置：副驾驶座位"/>
