--- a/app/src/main/res/layout/activity_xfzl.xml
+++ b/app/src/main/res/layout/activity_xfzl.xml
@@ -2,7 +2,86 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     xmlns:android="http://schemas.android.com/apk/res/android" >
-
+    <include layout="@layout/title_text"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/warning_color"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/nzms"
+            android:layout_marginTop="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@color/white">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:textColor="@color/car_message_text"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="13dp"
+                android:text="闹钟模式"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:src="@mipmap/icon_right"
+                android:layout_marginRight="13dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/warning_color"/>
+        <RelativeLayout
+            android:id="@+id/dsms"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@color/white">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:textColor="@color/car_message_text"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="13dp"
+                android:text="定时模式"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:src="@mipmap/icon_right"
+                android:layout_marginRight="13dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/warning_color"/>
+        <RelativeLayout
+            android:id="@+id/xqms"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@color/white">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14dp"
+                android:textColor="@color/car_message_text"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="13dp"
+                android:text="星期模式"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="16dp"
+                android:src="@mipmap/icon_right"
+                android:layout_marginRight="13dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
