--- a/app/src/main/res/layout/title_text.xml
+++ b/app/src/main/res/layout/title_text.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="42dp"
-    android:paddingLeft="5dp"
+    android:paddingLeft="13dp"
     android:paddingRight="5dp"
+    android:background="@color/title_color"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <TextView
+        android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:textSize="16dp"
+        android:textColor="@color/white"
         android:text="@string/cancel"/>
     <TextView
+        android:id="@+id/xfzl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:textColor="@color/white"
+        android:textSize="20dp"
         android:text="@string/xfzl"/>
 
 </RelativeLayout>
