--- a/app/src/main/res/layout/activity_changepwd.xml
+++ b/app/src/main/res/layout/activity_changepwd.xml
@@ -25,8 +25,10 @@
             android:text="原密码"
             />
         <EditText
+            android:id="@+id/oldpsd"
             android:hint="请输入原密码"
             android:paddingLeft="20dp"
+            android:inputType="textPassword"
             android:layout_width="0dp"
             android:textColor="@color/hint_input_color"
             android:textSize="14dp"
@@ -56,9 +58,11 @@
             android:text="新密码"
             />
         <EditText
+            android:id="@+id/newpsd"
             android:hint="请设置新密码"
             android:paddingLeft="20dp"
             android:layout_width="0dp"
+            android:inputType="textPassword"
             android:textColor="@color/hint_input_color"
             android:textSize="14dp"
             android:textColorHint="@color/hint_input_color"
@@ -87,6 +91,7 @@
             android:text="确认密码"
             />
         <EditText
+            android:id="@+id/surepsd"
             android:hint="再次确认密码"
             android:paddingLeft="20dp"
             android:layout_width="0dp"
@@ -96,6 +101,7 @@
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
             android:background="@null"
+            android:inputType="textPassword"
             android:layout_height="wrap_content"
             android:layout_weight="3"/>
     </LinearLayout>
