--- a/app/src/main/res/layout/activity_customerservice.xml
+++ b/app/src/main/res/layout/activity_customerservice.xml
@@ -4,10 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/page_color">
+    android:background="@mipmap/img_bg">
 
 
-    <include layout="@layout/first_title" />
+    <!--<include layout="@layout/first_title" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="42dp">
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="16dp"
+            android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
+            android:rotation="180"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/icon_right"/>
+    </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
