--- a/app/src/main/res/layout/activity_car_address.xml
+++ b/app/src/main/res/layout/activity_car_address.xml
@@ -16,6 +16,89 @@
         android:clickable="true">
 
     </com.baidu.mapapi.map.MapView>
+    <LinearLayout
+        android:id="@+id/singler"
+        android:layout_width="40dp"
+        android:layout_height="125dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="17dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:background="@drawable/layout_radius_white">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <View
+                android:layout_width="2dp"
+                android:layout_height="12dp"
+                android:layout_centerVertical="true"
+                android:background="@color/tv_warning"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="报警"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/tv_warning"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <View
+                android:layout_width="2dp"
+                android:layout_height="12dp"
+                android:layout_centerVertical="true"
+                android:background="@color/tv_offline"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="离线"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/tv_offline"/>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+            <View
+                android:layout_width="2dp"
+                android:layout_height="12dp"
+                android:layout_centerVertical="true"
+                android:background="@color/tv_online"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="在线"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/tv_online"/>
+        </RelativeLayout>
+    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/question"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="17dp"
+        android:elevation="4dp"
+        android:background="@drawable/layout_radius_circle">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="3dp"
+            android:textSize="25sp"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:textColor="@color/question"
+            android:text="？"/>
+    </RelativeLayout>
+
 
         <android.support.v4.view.ViewPager
             android:id="@+id/fl_vp"
