--- a/app/src/main/res/layout/activity_car_address.xml
+++ b/app/src/main/res/layout/activity_car_address.xml
@@ -91,7 +91,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="3dp"
+            android:paddingLeft="7dp"
             android:textSize="25sp"
             android:layout_centerInParent="true"
             android:gravity="center"
@@ -99,7 +99,21 @@
             android:text="？"/>
     </RelativeLayout>
 
-
+    <ImageView
+        android:id="@+id/refresh"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@mipmap/icon_refresh"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="47dp"/>
+    <ImageView
+        android:id="@+id/loc"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@mipmap/icon_loc"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="-60dp"
+        android:layout_alignBottom="@id/refresh"/>
         <android.support.v4.view.ViewPager
             android:id="@+id/fl_vp"
             android:visibility="gone"
