--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,24 @@
         android:layout_weight="3"
         android:orientation="vertical"
         android:gravity="center">
-        <View
+        <!--<View-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:background="@drawable/view_radius"-->
+            <!--/>-->
+        <LinearLayout
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/view_radius"
-            />
+            android:gravity="center"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="13sp"
+                android:text="logo"/>
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
