--- a/app/src/main/res/layout/view_alert_window.xml
+++ b/app/src/main/res/layout/view_alert_window.xml
@@ -26,7 +26,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="224dp"
-            android:background="@drawable/layout_radius_drak_white"
+            android:background="@color/warning_color"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:orientation="vertical">
@@ -36,12 +36,14 @@
                 android:layout_weight="1">
                 <TextView
                     android:id="@+id/owner_name"
+                    android:textColor="@color/color_car"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="车主姓名：赵丽丽"/>
                 <TextView
                     android:id="@+id/car_status"
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
@@ -51,6 +53,7 @@
             </RelativeLayout>
             <TextView
                 android:id="@+id/phone_num"
+                android:textColor="@color/color_car"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center_vertical"
@@ -58,6 +61,7 @@
                 android:text="手机号码：13510233333"/>
             <TextView
                 android:id="@+id/car_vin"
+                android:textColor="@color/color_car"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -65,6 +69,7 @@
                 android:text="车架号：L1111111111W12345"/>
             <TextView
                 android:id="@+id/car_num"
+                android:textColor="@color/color_car"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -74,6 +79,7 @@
                 android:id="@+id/car_type"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+                android:textColor="@color/color_car"
             android:layout_weight="1.5"
             android:gravity="center_vertical"
             android:text="车型：奥迪-奥迪A4L"/>
@@ -91,6 +97,7 @@
                 android:layout_weight="1.5"
                 android:lines="2"
                 android:ellipsize="end"
+                android:textColor="@color/color_car"
                 android:gravity="center_vertical"
                 android:text="联系地址：深圳市罗湖区莲湖路"/>
             <TextView
@@ -98,6 +105,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:textColor="@color/color_car"
                 android:gravity="center_vertical"
                 android:text="所属客户：瓜子二手车"/>
 
@@ -127,7 +135,7 @@
             android:id="@+id/close"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@mipmap/miaobiao"
+            android:src="@mipmap/icon_delete"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
 </RelativeLayout>
