--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,7 +44,7 @@
     <color name="text_title_11">#111111</color>
     <color name="text_msg_33">#333333</color>
     <color name="text_input_44">#444444</color>
-
+    <color name="stop_mark">#1A1818</color>
     <color name="text_item_33">#333333</color>
     <color name="btn_alert">#222222</color>
 
