--- a/app/src/main/res/layout/layout_marker_stop.xml
+++ b/app/src/main/res/layout/layout_marker_stop.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="250dp"
+<FrameLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/black"
     android:alpha="0.5"
-    android:padding="10dp"
-    android:orientation="vertical"
+    android:background="@drawable/icons_txtbg_tr"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="10dp">
     <TextView
         android:id="@+id/marker_stopstarttime"
         android:layout_width="match_parent"
@@ -38,3 +41,9 @@
         android:textColor="@color/white"
         android:textSize="12sp"/>
 </LinearLayout>
+    <!--<ImageView-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:src="@mipmap/path"/>-->
+</FrameLayout>
