--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,6 +98,7 @@
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
                 android:background="@null"
+                android:imeOptions="actionGo"
                 android:hint="@string/login_pwd"
                 android:singleLine="true"
 
@@ -118,6 +119,7 @@
 
             <EditText
                 android:id="@+id/yzm"
+                android:visibility="gone"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                 android:layout_height="match_parent"
@@ -130,6 +132,7 @@
                 android:textSize="14sp"
                 android:paddingLeft="5dp"/>
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/pic_yzm"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -156,7 +159,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/ll1"
             android:layout_alignRight="@id/ll1"
-            android:layout_below="@id/rl_yzm"
+            android:layout_below="@id/ll2"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical">
 
