--- a/app/src/main/res/layout/activity_account_message.xml
+++ b/app/src/main/res/layout/activity_account_message.xml
@@ -14,6 +14,7 @@
         android:background="@color/white"
         >
         <TextView
+            android:id="@+id/tv_dlzh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录账号"
@@ -24,9 +25,15 @@
             android:id="@+id/login_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:text="22222222222222"
+            android:singleLine="true"
+            android:maxLines="1"
             android:textSize="16sp"
+            android:gravity="right"
+            android:paddingLeft="10dp"
+            android:layout_toRightOf="@id/tv_dlzh"
             android:layout_alignParentRight="true"
+
             android:layout_centerVertical="true"/>
     </RelativeLayout>
     <View
@@ -40,10 +47,12 @@
         android:padding="10dp"
         android:background="@color/white">
         <TextView
+            android:id="@+id/tv_xm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="姓名"
             android:textSize="16sp"
+            android:singleLine="true"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"/>
         <ImageView
@@ -56,10 +65,15 @@
         <TextView
             android:id="@+id/user_name"
             android:layout_toLeftOf="@id/toright"
+            android:layout_toRightOf="@id/tv_xm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:singleLine="true"
+            android:maxLines="1"
             android:text=""
+            android:paddingLeft="10dp"
+            android:gravity="right"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"/>
 
@@ -110,6 +124,7 @@
         android:padding="10dp"
         android:background="@color/white">
         <TextView
+            android:id="@+id/tv_yx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="邮箱"
@@ -128,8 +143,13 @@
             android:layout_toLeftOf="@id/toright2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_yx"
             android:textSize="16sp"
+            android:singleLine="true"
             android:text=""
+            android:paddingLeft="10dp"
+            android:maxLines="1"
+            android:gravity="right"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"/>
 
@@ -144,6 +164,7 @@
         android:padding="10dp"
         android:background="@color/white">
         <TextView
+            android:id="@+id/tv_sskh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="所属客户"
@@ -159,6 +180,9 @@
             android:text=""
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
+            android:paddingLeft="10dp"
+            android:gravity="right"
+            android:layout_toRightOf="@id/tv_sskh"
             android:layout_centerVertical="true"/>
 
     </RelativeLayout>
@@ -169,6 +193,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:padding="10dp"
+        android:visibility="gone"
         android:background="@color/white">
         <TextView
             android:layout_width="wrap_content"
