--- a/app/src/main/res/layout/item_search_history.xml
+++ b/app/src/main/res/layout/item_search_history.xml
@@ -13,6 +13,7 @@
         android:layout_centerVertical="true"
         android:src="@mipmap/warning"/>
     <ImageView
+        android:visibility="gone"
         android:id="@+id/iv_delete"
         android:layout_width="18dp"
         android:layout_height="18dp"
@@ -25,7 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:text="1312123"
+        android:singleLine="true"
+        android:maxLines="1"
+        android:text="13121231312123"
         android:layout_toRightOf="@id/iv_warning"
         android:layout_toLeftOf="@id/iv_delete"
         android:layout_centerVertical="true"/>
