--- a/app/src/main/res/layout/layout_search_car.xml
+++ b/app/src/main/res/layout/layout_search_car.xml
@@ -28,6 +28,16 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
             android:src="@mipmap/smallsearch"/>
+        <ImageView
+            android:id="@+id/delete"
+            android:visibility="gone"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@mipmap/delete"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"
+            />
         <EditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
@@ -38,8 +48,10 @@
             android:gravity="center_vertical"
             android:layout_toRightOf="@id/icon_search"
             android:iconifiedByDefault="false"
+            android:layout_toLeftOf="@id/delete"
             android:imeOptions="actionSearch"
             android:singleLine="true"
             android:hint="@string/et_search"/>
+
     </RelativeLayout>
 </RelativeLayout>
