--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:orientation="vertical"
         android:gravity="center">
         <!--<View-->
@@ -18,26 +18,30 @@
             <!--android:layout_height="60dp"-->
             <!--android:background="@drawable/view_radius"-->
             <!--/>-->
-        <LinearLayout
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@drawable/view_radius"
-            android:gravity="center"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="13sp"
-                android:text="logo"/>
-        </LinearLayout>
-        <TextView
+        <!--<LinearLayout-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="60dp"-->
+            <!--android:background="@drawable/view_radius"-->
+            <!--android:gravity="center"-->
+            <!--&gt;-->
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:textColor="@color/white"-->
+                <!--android:textSize="13sp"-->
+                <!--android:text="logo"/>-->
+        <!--</LinearLayout>-->
+        <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="19sp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:textColor="#FF4A4A4A"-->
+            <!--android:text="@string/app_name"/>-->
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="19sp"
-            android:layout_marginTop="10dp"
-            android:textColor="#FF4A4A4A"
-            android:text="@string/app_name"/>
+            android:src="@mipmap/logo1"/>
 
     </LinearLayout>
 
