--- a/app/src/main/res/layout/fragment_device_message.xml
+++ b/app/src/main/res/layout/fragment_device_message.xml
@@ -33,9 +33,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="电量10%"
-            android:textColor="@color/device_msg"
-            android:background="@drawable/dl_radius"
             android:layout_toLeftOf="@id/warning_type"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:id="@+id/waring"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="@color/white"
+            android:background="@color/device_msg"
+            android:layout_toLeftOf="@id/dl"
             android:layout_marginRight="10dp"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
