--- a/app/src/main/res/layout/list_device.xml
+++ b/app/src/main/res/layout/list_device.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="30dp"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/device_name"
@@ -19,18 +18,20 @@
             android:id="@+id/bind_time"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.4"
+            android:maxLines="1"
             android:gravity="center_vertical"
-            android:text="绑车时间:2017-08-01"/>
+            android:text="绑车时间:2017-08-01 08-01"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/install_loc"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
             android:text="安装位置：副驾驶座位"/>
     </LinearLayout>
 </LinearLayout>
