--- a/app/src/main/res/layout/fragment_device_message.xml
+++ b/app/src/main/res/layout/fragment_device_message.xml
@@ -111,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center_vertical"
-        android:layout_weight="4">
+        android:layout_weight="5.2">
         <TextView
             android:id="@+id/loc_address"
             android:layout_width="wrap_content"
@@ -133,6 +133,7 @@
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:visibility="gone"
             android:textColor="@color/title_color"
             android:text="@string/close_loc"/>
         <TextView
@@ -140,6 +141,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:visibility="gone"
             android:layout_height="match_parent"
             android:textColor="@color/title_color"
             android:text="@string/xfzl"/>
@@ -147,6 +149,7 @@
             android:id="@+id/trajectory"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:visibility="gone"
             android:gravity="center"
             android:textColor="@color/title_color"
             android:layout_height="match_parent"
