--- a/app/src/main/res/layout/view_alert_window.xml
+++ b/app/src/main/res/layout/view_alert_window.xml
@@ -52,7 +52,16 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentRight="true"
                     android:orientation="horizontal">
-
+                    <TextView
+                        android:id="@+id/car_danger"
+                        android:visibility="gone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/dl_radius"
+                        android:layout_gravity="center_vertical"
+                        android:textColor="@color/device_msg"
+                        android:text="@string/impor_care"/>
                     <TextView
                         android:id="@+id/car_yuqi_status"
                         android:visibility="gone"
