--- a/app/src/main/res/layout/drop_list.xml
+++ b/app/src/main/res/layout/drop_list.xml
@@ -3,6 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="30dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:textColor="@color/color_car_detail"
     android:gravity="center"
     android:layout_gravity="center"
