--- a/app/src/main/res/layout/tree_list_item.xml
+++ b/app/src/main/res/layout/tree_list_item.xml
@@ -24,6 +24,7 @@
         android:textSize="18dip" />
 
     <TextView
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
